Closed Bug 154538 Opened 23 years ago Closed 23 years ago

Activating Mailto link results in crash

Categories

(Camino Graveyard :: Page Layout, defect)

PowerPC
macOS
defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: chrispetersen, Assigned: sdagley)

References

()

Details

(Keywords: crash, regression)

Attachments

(2 files)

Build: 2002-06-26-05 Platform: OS X 10.1.5 Expected Results: Clicking on Mailto: link should launch default mail application What i got: Application crashes Steps to reproduce: 1) Open test case and click on link 2) Application crashes
Keywords: regression
Attached file stack trace
Severity: normal → blocker
Worked in previous build (2002-06-25-05).
->sdagley, regression, blocker
Assignee: saari → sdagley
Blocks: 147975
I'm investigating but the fickle finger of blame would currently be pointing at bryner's change in v1.7 of ContentClickListener.mm
The following snippet fixes the crash for me but it doesn't do anything: nsCOMPtr<nsIURI> uri; if (NS_FAILED(NS_NewURI(getter_AddRefs(uri), href))) return NS_ERROR_FAILURE;
Keywords: crash
NS_NewURI fails to return a uri if we don't have a protcol handler for the href passed in. Just test for the nil uri rather than trying to get a service for the scheme of a nil uri.
Comment on attachment 89448 [details] [diff] [review] Fixes regression from bryner's NSURLectomy r=brade (altho I do wish we could just have the existing code be "if !uri { escapedString... }" )
Attachment #89448 - Flags: review+
Comment on attachment 89448 [details] [diff] [review] Fixes regression from bryner's NSURLectomy r=bryner
fix just waiting for pinkerton to check it in (since I don't have check in privs for mozilla/chimera)
landed
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified in the 2002-06-28-05 NB.
Status: RESOLVED → VERIFIED
No longer blocks: 147975
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: