Fix crash clicking on url schemes we don't understand (bug 154538)